# asteroid-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
benchmark/: CMakeLists.txt  Registry_benchmark.cpp
include/asteroid/: Event.hpp  EventSubscriber.hpp  Input.hpp  Log.hpp  Scene.hpp  Timer.hpp  Vector2.hpp
include/asteroid/ecs/: Component.hpp  Entity.hpp  Registry.hpp  SparseSet.hpp  System.hpp  SystemBase.hpp
src/: main.cpp
src/asteroid/: Engine.cpp
src/demo/: CMakeLists.txt  Prefab.cpp  Prefab.hpp  test.cpp
src/demo/components/: Animation.hpp  Camera.hpp  Components.hpp  Enemy.hpp  Lifetime.hpp  Player.hpp  RigidBody.hpp  Sprite.hpp  Transform.hpp  UI.hpp
src/demo/systems/: AnimationSystem.hpp  CameraSystem.hpp  EnemySystem.cpp  EnemySystem.hpp  EntityCleanupSystem.hpp  InputSystem.cpp  InputSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlatformSpawnerSystem.cpp  PlatformSpawnerSystem.hpp  PlayerControlSystem.cpp  PlayerControlSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  Systems.hpp  UISystem.cpp  UISystem.hpp
src/engine/: Audio.cpp  Audio.hpp  Cache.cpp  Cache.hpp  Color.hpp  Engine.cpp  Engine.hpp  Input.cpp  Input.hpp  Rect.hpp  Scene.cpp  Texture.hpp  Timer.cpp  Timer.hpp  pch.hpp
src/engine/ecs/: Component.hpp  Entity.hpp  Registry.hpp  SparseSet.hpp  System.hpp  SystemBase.hpp
src/engine/events/: Event.hpp  EventBus.hpp  EventSubscriber.hpp
test/: CMakeLists.txt  Registry_test.cpp
